enum-ptr-tests/tests/fail/single_field.stderr
error: EnumPtr only supports single field
 --> $DIR/single_field.rs:9:5
  |
9 |     B(&'b i32, *const i32),
  |     ^

error: EnumPtr only supports single field
  --> $DIR/single_field.rs:16:5
   |
16 |     B,
   |     ^
